🛠  Apply simple refactorings